--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Feliz Cumpleaños!</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
@@ -24,30 +24,30 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox">Happy birthday to you!! Yeee! Many many happy blah...</p>
-        <p class="fake-btn">Send</p>
+        <p class="hbd-chatbox">Feliz Cumpleaños a la más hermosa mujer!.</p>
+        <p class="fake-btn">Enviar</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1">That's what I was going to do.</p>
-      <p class="idea-2">But then I stopped.</p>
-      <p class="idea-3">I realised, I wanted to do something
+      <p class="idea-1">Iba a googlear que darte</p>
+      <p class="idea-2">pero me detuve y</p>
+      <p class="idea-3">Pero se me ocurrió hacer algo con lo que soy bueno y que fuera
         <strong>special</strong>.</p>
-      <p class="idea-4">Because,</p>
-      <p class="idea-5">You are Special
-        <span>:)</span>
+      <p class="idea-4">Porque</p>
+      <p class="idea-5">Eres el amor de mi vida
+        <span><3</span>
       </p>
       <p class="idea-6">
-        <span>S</span>
-        <span>O</span>
+        <span>Y</span>
+        <span>Y</span>
       </p>
     </div>
     <div class="six">
       <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">¡Feliz Cumpleaños amor!</h3>
+        <h5 id="wishText">Eres una mujer tan inteligente, hermosa, perseverante, cuidadosa, bella, y muchas cosas más, que no cabe en este <h5> para describirte</h5>
       </div>
     </div>
     <div class="seven">
@@ -117,8 +117,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Okay, now come back and tell me if you liked it.</p>
-      <p id="replay">Or click, if you want to watch it again.</p>
+      <p>Dame un beso si te gustó</p>
+      <p id="replay">Puedes darme click para repetirlo!</p>
       <p class="last-smile">:)</p>
     </div>
   </div>
